--- a/Microservices/front-end/cmd/web/templates/test.page.gohtml
+++ b/Microservices/front-end/cmd/web/templates/test.page.gohtml
@@ -65,7 +65,7 @@ mailBtn.addEventListener("click", function() {
     headers: headers,
   }
 
-  fetch("http:\/\/127.0.0.1:8080/handle", body)
+  fetch({{print .BrokerURL "/handle"}}, body)
     .then((response) => response.json())
     .then((data) => {
       sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -99,7 +99,7 @@ logGBtn.addEventListener("click", function() {
     headers: headers,
   }
 
-  fetch("http:\/\/127.0.0.1:8080/log-grpc", body)
+  fetch({{print .BrokerURL "/log-grpc"}}, body)
     .then((response) => response.json())
     .then((data) => {
       sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -133,7 +133,7 @@ logBtn.addEventListener("click", function() {
     headers: headers,
   }
 
-  fetch("http:\/\/127.0.0.1:8080/handle", body)
+  fetch({{print .BrokerURL "/handle"}}, body)
     .then((response) => response.json())
     .then((data) => {
       sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -167,7 +167,7 @@ authBrokerBtn.addEventListener("click", function() {
     headers: headers,
   }
 
-  fetch("http:\/\/127.0.0.1:8080/handle", body)
+  fetch({{print .BrokerURL "/handle"}}, body)
     .then((response) => response.json())
     .then((data) => {
       sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -188,7 +188,7 @@ brokerBtn.addEventListener("click", function() {
     method: 'POST',
   }
 
-  fetch("http:\/\/127.0.0.1:8080", body)
+  fetch({{.BrokerURL}}, body)
     .then((response) => response.json())
     .then((data) => {
       sent.innerHTML = "empty post request";
