--- a/BuildingWebApplicationsWithGo/webApp/cmd/web/templates/terminal.page.gohtml
+++ b/BuildingWebApplicationsWithGo/webApp/cmd/web/templates/terminal.page.gohtml
@@ -27,7 +27,7 @@
 
   <div class="mb-3">
     <label for="cardholder-email" class="form-label">Cardholder Email</label>
-    <input type="email" class="form-control" id="cardholder-email" name="cardholder_email"
+    <input type="email" class="form-control" id="cardholder-email" name="email"
            required="" autocomplete="cardholder-email-new">
   </div>
 
@@ -47,6 +47,12 @@
       <span class="visually-hidden">Loading...</span>
     </div>
   </div>
+
+  <input type="hidden" name="payment_intent" id="payment_intent">
+  <input type="hidden" name="payment_method" id="payment_method">
+  <input type="hidden" name="payment_amount" id="payment_amount">
+  <input type="hidden" name="payment_currency" id="payment_currency">
+
 </form>
 
 {{end}}
@@ -60,11 +66,30 @@ const cardMessages = document.getElementById("card-messages");
 const payButton = document.getElementById("pay-button");
 const processing = document.getElementById("processing-payment")
 
-stripe = Stripe('pk_test_51QaHfrKnDGT3qqI4KnkP8PNGyP1FH2qYfXY4aASFaBfmOn9vfmyt3mxsIXE4nrG4x1YYBSkHvCrdxdlgsfW7KKzC00oap1XUpi');
+stripe = Stripe({{.API}});
 
-function hidePayButton() {
+function hidePayButtons() {
   payButton.classList.add("d-none");
   processing.classList.remove("d-none");
+}
+
+function showPayButtons() {
+  payButton.classList.remove("d-none");
+  processing.classList.add("d-none");
+}
+
+function showCardError(msg) {
+  cardMessages.classList.add("alert-danger");
+  cardMessages.classList.remove("alert-success");
+  cardMessages.classList.remove("d-none");
+  cardMessages.innerText = msg;
+}
+
+function showCardSuccess() {
+  cardMessages.classList.remove("alert-danger");
+  cardMessages.classList.add("alert-success");
+  cardMessages.classList.remove("d-none");
+  cardMessages.innerText = "Transaction successful";
 }
 
 function val() {
@@ -76,7 +101,63 @@ function val() {
     return;
   }
   form.classList.add("was-validated");
-  hidePayButton();
+  hidePayButtons();
+
+  let amountToCharge = String(parseFloat(document.getElementById("amount").value) * 100)
+
+  let payload = {
+    amount: amountToCharge,
+    currency: 'usd',
+  }
+
+  const requestOptions = {
+    method: 'post',
+    headers: {
+      'Accept': 'application/json',
+      'Content-Type': 'application/json',
+    },
+    body: JSON.stringify(payload),
+  }
+
+  fetch("{{index .StringMap "publishable_key"}}", requestOptions)
+    .then(response => response.text())
+    .then(response => {
+      let data;
+      try {
+        data = JSON.parse(response);
+        stripe.confirmCardPayment(data.client_secret, {
+          payment_method: {
+            card: card,
+            billing_details: {
+              name: document.getElementById("cardholder-name").value,
+            }
+          }
+        }).then(function(result) {
+          if (result.error) {
+            // Card declined, or something went wrong with the card
+            showCardError(result.error.message);
+            showPayButtons();
+          } else if(result.paymentIntent) {
+            if (result.paymentIntent.status == "succeeded") {
+              // We have charged the card
+              document.getElementById("payment_method").value = result.paymentIntent.payment_method_types[0];
+              document.getElementById("payment_intent").value = result.paymentIntent.id;
+              document.getElementById("payment_amount").value = result.paymentIntent.amount;
+              document.getElementById("payment_currency").value = result.paymentIntent.currency;
+              processing.classList.add("d-none");
+              showCardSuccess();
+
+              // Submit the form
+              document.getElementById("charge_form").submit();
+            }
+          }
+        })
+      } catch (err) {
+        console.log(err);
+        showCardError("Invalid response from payment gateway!");
+        showPayButtons();
+      }
+    })
 }
 
 (function() {
