got database transactions implemented to site

--- a/BuildingWebApplicationsWithGo/webApp/cmd/web/templates/succeeded.page.gohtml
+++ b/BuildingWebApplicationsWithGo/webApp/cmd/web/templates/succeeded.page.gohtml
@@ -8,10 +8,13 @@
 <h2 class="mt-5">Payment Succeeded</h2>
 <hr>
 <p>Payment Intent: {{index .Data "pi"}}</p>
-<p>Cardholder: {{index .Data "cardholder"}}</p>
+<p>Customer Name: {{index .Data "first_name"}} {{index .Data "last_name"}}</p>
 <p>Email: {{index .Data "email"}}</p>
 <p>Payment Method: {{index .Data "pm"}}</p>
 <p>Payment Amount: {{index .Data "pa"}}</p>
 <p>Payment Currency: {{index .Data "pc"}}</p>
+<p>Payment Last Four: {{index .Data "last_four"}}</p>
+<p>Payment Bank Return Code: {{index .Data "bank_return_code"}}</p>
+<p>Payment Expiry Date: {{index .Data "expiry_month"}}/{{index .Data "expiry_year"}}</p>
 
 {{end}}
