--- a/BuildingWebApplicationsWithGo/webApp/cmd/web/templates/bronze-plan.page.gohtml
+++ b/BuildingWebApplicationsWithGo/webApp/cmd/web/templates/bronze-plan.page.gohtml
@@ -19,7 +19,7 @@
   <p class="text-center">{{$widget.Description}}</p>
   <hr>
 
-  <input type="hidden" name="product_id" value="{{$widget.ID}}">
+  <input type="hidden" name="product_id" id="product_id" value="{{$widget.ID}}">
   <input type="hidden" name="amount" id="amount" value="{{$widget.Price}}">
 
   <div class="mb-3">
@@ -134,10 +134,17 @@ function stripePaymentMethodHandler(result) {
   } else {
     // Create a customer and subscribe to plan
     let payload = {
+      product_id: document.getElementById("product_id").value,
       plan: '{{$widget.PlanID}}',
       payment_method: result.paymentMethod.id,
       email: document.getElementById("cardholder-email").value,
       last_four: result.paymentMethod.card.last4,
+      card_brand: result.paymentMethod.card.brand,
+      exp_month: result.paymentMethod.card.exp_month,
+      exp_year: result.paymentMethod.card.exp_year,
+      first_name: document.getElementById("first-name").value,
+      last_name: document.getElementById("last-name").value,
+      amount: document.getElementById("amount").value,
     }
 
     const requestOptions = {
@@ -154,8 +161,13 @@ function stripePaymentMethodHandler(result) {
       .then(function(data) {
         console.log(data);
         processing.classList.add("d-none");
-        // Set hidden vars
-        // Submit the form
+        showCardSuccess();
+        sessionStorage.first_name = document.getElementById("first-name").value;
+        sessionStorage.last_name = document.getElementById("last-name").value;
+        sessionStorage.amount = "{{formatCurrency $widget.Price}}";
+        sessionStorage.last_four = result.paymentMethod.card.last4;
+
+        location.href = "/receipt/bronze";
       })
   }
 }
