--- a/BuildingWebApplicationsWithGo/cmd/web/templates/login.page.gohtml
+++ b/BuildingWebApplicationsWithGo/cmd/web/templates/login.page.gohtml
@@ -9,7 +9,7 @@
   <div class="col-md-6 offset-md-3">
     <div class="alert alert-danger text-center d-none" id="login-messages"></div>
 
-    <form action="" method="post"
+    <form method="post" action="/login"
           name="login_form" id="login_form"
           class="d-block needs-validation charge-form"
           autocomplete="off" novalidate="">
@@ -87,7 +87,8 @@ function val() {
         localStorage.setItem('token', data.authentication_token.token);
         localStorage.setItem('token_expiry', data.authentication_token.expiry);
         showSuccess();
-        location.href = "/";
+        //location.href = "/";
+        document.getElementById("login_form").submit();
       } else {
         showError(data.message);
       }
