--- a/BuildingWebApplicationsWithGo/cmd/web/templates/login.page.gohtml
+++ b/BuildingWebApplicationsWithGo/cmd/web/templates/login.page.gohtml
@@ -32,6 +32,10 @@
       <hr>
 
       <a href="javascript:void(0)" class="btn btn-primary" onclick="val()">Login</a>
+
+      <p class="mt-2">
+        <small><a href="/forgot-password">Forgot Password?</a>
+      </p>
     </form>
   </div>
 </div>
