--- a/BuildingWebApplicationsWithGo/cmd/api/templates/password-reset.plain.tmpl
+++ b/BuildingWebApplicationsWithGo/cmd/api/templates/password-reset.plain.tmpl
@@ -6,6 +6,8 @@ You recently requested a link to reset your password.
 Click on the link below to get started:
 {{.Link}}
 
+This link expires in 60 minutes.
+
 --
 Widgets Co.
 {{end}}
