--- a/BuildingWebApplicationsWithGo/cmd/web/templates/reset-password.page.gohtml
+++ b/BuildingWebApplicationsWithGo/cmd/web/templates/reset-password.page.gohtml
@@ -84,7 +84,7 @@ function val() {
     body: JSON.stringify(payload),
   }
 
-  fetch("{{.API}}/api/forgot-password", requestOptions)
+  fetch("{{.API}}/api/reset-password", requestOptions)
     .then(response => response.json())
     .then(data => {
       console.log(data);
