--- a/BuildingWebApplicationsWithGo/cmd/web/templates/base.layout.gohtml
+++ b/BuildingWebApplicationsWithGo/cmd/web/templates/base.layout.gohtml
@@ -32,15 +32,37 @@
                 <li><a class="dropdown-item" href="/plans/bronze">Subscription</a></li>
               </ul>
             </li>
-            <li id="vt-link" class="nav-item d-none">
-              <a class="nav-link" href="/admin/virtual-terminal">Virtual Terminal</a>
-            </li>
+
+            {{if eq .IsAuthenticated true}}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Admin
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/admin/virtual-terminal">Virtual Terminal</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="/admin/all-sales">All Sales</a></li>
+                  <li><a class="dropdown-item" href="/admin/all-subscriptions">All Subscriptions</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                </ul>
+              </li>
+            {{end}}
           </ul>
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li id="login-link" class="nav-item d-none">
-              <a class="nav-link" href="/login">Login</a>
-            </li>
-          </ul>
+
+          {{if eq .IsAuthenticated true}}
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li id="login-link" class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+              </li>
+            </ul>
+          {{else}}
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li id="login-link" class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+              </li>
+            </ul>            
+          {{end}}
         </div>
       </div>
     </nav>
@@ -56,19 +78,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script>
-      let loginLink = document.getElementById("login-link");
-      let vtLink = document.getElementById("vt-link");
-
-      document.addEventListener("DOMContentLoaded", function() {
-        if (localStorage.getItem("token") !== null) {
-          loginLink.innerHTML = '<a class="nav-link" onclick="logout()" href="/#!">Logout</a>';
-          vtLink.classList.remove("d-none");
-        } else {
-          loginLink.innerHTML = '<a class="nav-link" href="/login">Login</a>';
-        }
-        loginLink.classList.remove("d-none");
-      })
-
       function logout() {
         localStorage.removeItem("token");
         localStorage.removeItem("token_expiry");
