--- a/BuildingWebApplicationsWithGo/cmd/web/templates/all-subscriptions.page.gohtml
+++ b/BuildingWebApplicationsWithGo/cmd/web/templates/all-subscriptions.page.gohtml
@@ -21,13 +21,50 @@
   <tbody>
   </tbody>
 </table>
+<nav>
+  <ul id="paginator" class="pagination">
+  </ul>
+</nav>
 {{end}}
 
 {{define "js"}}
 <script>
-document.addEventListener("DOMContentLoaded", function() {
+let currentPage = 1;
+let pageSize = 5;
+
+function paginator(pages, curPage) {
+  let p = document.getElementById("paginator");
+
+  let html = `<li class="page-item"><a href="#!" class="page-link pager" data-page="${curPage - 1}">&lt;</a></li>`;
+
+  for (var i = 0; i <= pages; i++) {
+    html += `<li class="page-item"><a href="#!" class="page-link pager" data-page="${i + 1}">${i + 1}</a></li>`;
+  }
+
+  html += `<li class="page-item"><a href="#!" class="page-link pager" data-page="${curPage + 1}">&gt;</a></li>`;
+
+  p.innerHTML = html;
+
+  let pageBtns = document.getElementsByClassName("pager");
+  for (var j = 0; j < pageBtns.length; j++) {
+    pageBtns[j].addEventListener("click", function(evt) {
+      let desiredPage = evt.target.getAttribute("data-page");
+      if ((desiredPage > 0) && (desiredPage <= pages + 1)) {
+        updateTable(pageSize, desiredPage);
+      }
+    })
+  }
+}
+
+function updateTable(ps, cp) {
   let token = localStorage.getItem("token");
   let tbody = document.getElementById("sales-table").getElementsByTagName("tbody")[0];
+  tbody.innerHTML = "";
+
+  let body = {
+    page_size: parseInt(ps, 10),
+    page: parseInt(cp, 10),
+  }
 
   const requestOptions = {
     method: 'post',
@@ -36,6 +73,7 @@ document.addEventListener("DOMContentLoaded", function() {
       'Content-Type': 'application/json',
       'Authorization': 'Bearer ' + token,
     },
+    body: JSON.stringify(body),
   }
 
   fetch("{{.API}}/api/admin/all-subscriptions", requestOptions)
@@ -43,8 +81,8 @@ document.addEventListener("DOMContentLoaded", function() {
     .then(function (data) {
       console.log(data);
 
-      if (data) {
-        data.forEach(function(i) {
+      if (data.orders) {
+        data.orders.forEach(function(i) {
           let newRow = tbody.insertRow();
           let newCell = newRow.insertCell();
 
@@ -70,13 +108,18 @@ document.addEventListener("DOMContentLoaded", function() {
             newCell.innerHTML = `<span class="badge bg-success">Charged</span>`;
           }
         })
+        paginator(data.last_page, data.current_page);
       } else {      
         let newRow = tbody.insertRow();
         let newCell = newRow.insertCell();
-        newCell.setAttribute("colspan", "4");
+        newCell.setAttribute("colspan", "5");
         newCell.innerHTML = `No data available`;
       }
     })
+}
+
+document.addEventListener("DOMContentLoaded", function() {
+  updateTable(pageSize, currentPage)
 })
 
 function formatCurrency(amount) {
