--- a/BuildingWebApplicationsWithGo/cmd/web/templates/base.layout.gohtml
+++ b/BuildingWebApplicationsWithGo/cmd/web/templates/base.layout.gohtml
@@ -80,6 +80,33 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script>
+    {{if eq .IsAuthenticated true}}
+    let socket;
+
+    document.addEventListener("DOMContentLoaded", function() {
+      socket = new WebSocket("ws://localhost:4000/ws")
+
+      socket.onopen = () => {
+        console.log("Successfully connected to web sockets")
+      }
+
+      socket.onclose = event => { };
+      socket.onerror = error => { };
+      socket.onmessage = msg => {
+        let data = JSON.parse(msg.data);
+
+        switch (data.action) {
+        case "logout":
+          if (data.user_id === {{.UserID}}) {
+            logout();
+          }
+          break;
+        default:
+        }
+      }
+    })
+    {{end}}
+
       function logout() {
         localStorage.removeItem("token");
         localStorage.removeItem("token_expiry");
